@@ -83,7 +83,7 @@ if ($wmDir = opendir($gallery->app->watermarkDir)) {
     if(sizeof($options) > 0) {
         echo "<b>" . _("Watermark") . ":</b>&nbsp;";
         
-        array_sort_by_fields(&$options, 'text', 'desc', false);
+        array_sort_by_fields($options, 'text', 'desc', false);
         if ($watermarkForm["allowNone"]) {
             $options[] = array('value' => '', 'text' => _("* No Watermark *"), 'selected' => true);
         }
